<resources>
    <string name="app_name">BD Deal</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="nav_home">Home</string>
    <string name="nav_shopping">Shopping</string>
    <string name="nav_gents">Gents</string>
    <string name="nav_girls">Girls</string>
    <string name="nav_kids">Baby and Kids</string>
    <string name="nav_home_decor">Home Decor</string>
    <string name="nav_gift">Gift Shop</string>
    <string name="action_search">Search</string>
    <string name="about_us">About Us</string>
    <string name="customer_service">Customer Service</string>
    <string name="contact">Contact</string>
    <string name="help">Help</string>
    <string name="card_menu_order">Order</string>
    <string name="card_menu_order_call">Call to Order</string>
    <string name="title_activity_single_product">Product</string>
    <string name="order">Order Now</string>
    <string name="order_call">Call to Order</string>
    <string name="title_activity_order">Order</string>
    <string name="contact_mobile">Mobile : +8801975102026</string>
    <string name="contact_email">Email : bddealonline@gmail.com</string>
    <string name="order_info">Your Information</string>
    <string name="order_comment">Comment(If any)</string>
    <string name="order_quantity">Quantity</string>
    <string name="order_address">Address</string>
    <string name="order_mobile">Mobile</string>
    <string name="order_email">Email</string>
    <string name="order_name">Name</string>
    <string name="about_us_content">BDDeal is the largest online shop in Bangladesh. We provide simple deals, all types
        of quality products and cash on delivery at home. 15% cash back in advance Payment. Please call our mobile
        number 01975 102026 or mail to bddealonline@gmail.com. Thank you.
    </string>
    <string name="title_activity_contact">Contact</string>
    <string name="title_activity_about_us">About Us</string>
    <string name="title_activity_category_product">Category</string>
    <string name="product_group_name">All Products</string>
    <string name="search_hint">Search Product</string>
    <string name="search_result">Search Result</string>
</resources>
