<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
            android:id="@+id/action_search"
            android:icon="@drawable/ic_action_search"
            android:title="@string/action_search"
            app:showAsAction="ifRoom|collapseActionView"
            app:actionViewClass="android.support.v7.widget.SearchView"
            android:visible="true"/>
    <item
            android:id="@+id/action_about_us"
            android:title="@string/about_us"
            app:showAsAction="never"/>
    <item
            android:id="@+id/action_customer_service"
            android:title="@string/customer_service"
            app:showAsAction="never"/>
    <item
            android:id="@+id/action_contact"
            android:title="@string/contact"
            app:showAsAction="never"/>
    <item
            android:id="@+id/action_help"
            android:title="@string/help"
            app:showAsAction="never"/>
</menu>
