<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/order_product_name"
            android:textSize="20dp"
            android:layout_gravity="center"/>
    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="25dp"
            android:text="@string/order_info"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:textAlignment="center"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text="@string/order_name"
            android:ems="10"
            android:id="@+id/order_name"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:text="@string/order_email"
            android:ems="10"
            android:id="@+id/order_email"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:text="@string/order_mobile"
            android:ems="10"
            android:id="@+id/order_mobile"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text="@string/order_address"
            android:ems="10"
            android:id="@+id/order_address"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:text="@string/order_quantity"
            android:ems="10"
            android:id="@+id/order_quantity"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text="@string/order_comment"
            android:ems="10"
            android:id="@+id/order_comment"/>
    <Button
            android:id="@+id/order_product_order"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order"
            android:layout_gravity="center"/>

</LinearLayout>